--- a/build.gradle
+++ b/build.gradle
@@ -39,5 +39,6 @@ dependencies {
     compile 'mysql:mysql-connector-java:5.1.38'
     compile 'net.sf.marineapi:marineapi:0.9.0'
     compile 'org.postgresql:postgresql:9.4.1212.jre7'
+    compile 'org.apache.commons:commons-math3:3.6.1'
 
 }
