--- a/build.gradle
+++ b/build.gradle
@@ -24,21 +24,28 @@ repositories {
     // Use 'jcenter' for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    mavenCentral()
+
 }
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
     // The production code uses the SLF4J logging API at compile time
-    compile 'org.slf4j:slf4j-api:1.7.21'
+
+
+    compile 'log4j:log4j:1.2.17'
+    compile 'org.jogamp.jogl:jogl:2.3.2'
+    compile 'org.json:json:20160810'
     compile 'com.sun.xml.messaging.saaj:saaj-impl:1.3'
     compile 'com.miglayout:miglayout:3.7.4'
-//    compile 'com.miglayout:miglayout-swt:4.2'
-//    compile 'com.miglayout:miglayout-swing:4.2'
     compile 'org.scream3r:jssc:2.8.0'
     compile 'org.jdbi:jdbi:2.78'
     compile 'mysql:mysql-connector-java:5.1.38'
     compile 'net.sf.marineapi:marineapi:0.9.0'
     compile 'org.postgresql:postgresql:9.4.1212.jre7'
     compile 'org.apache.commons:commons-math3:3.6.1'
+    compile 'com.spatial4j:spatial4j:0.5'
+    compile 'org.processing:core:3.2.3'
 
+    compile files ('./lib/unfolding.0.9.6.jar')
 }
