--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'serialtest'
-version '1.0-SNAPSHOT'
+version '0.1'
 
 apply plugin: 'java'
 apply plugin: 'application'
@@ -19,23 +19,17 @@ jar {
     }
 }
 
-// In this section you declare where to find the dependencies of your project
 repositories {
-    // Use 'jcenter' for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
+    
     jcenter()
     mavenCentral()
 
 }
 
-// In this section you declare the dependencies for your production and test code
 dependencies {
-    // The production code uses the SLF4J logging API at compile time
 
-
-//    compile 'log4j:log4j:1.2.17'
-//    compile 'org.jogamp.jogl:jogl:2.3.2'
-//    compile 'org.json:json:20160810'
+    compile 'log4j:log4j:1.2.17'
+    compile 'org.jogamp.jogl:jogl:2.3.2'
     compile 'com.sun.xml.messaging.saaj:saaj-impl:1.3'
     compile 'com.miglayout:miglayout:3.7.4'
     compile 'org.scream3r:jssc:2.8.0'
@@ -45,6 +39,9 @@ dependencies {
     compile 'org.postgresql:postgresql:9.4.1212.jre7'
     compile 'org.apache.commons:commons-math3:3.6.1'
     compile 'com.spatial4j:spatial4j:0.5'
+    compile 'com.github.lgooddatepicker:LGoodDatePicker:8.3.0'
+    compile 'org.processing:core:2.2.1'
+    compile 'com.jidesoft:jide-oss:3.6.18'
 
     compile fileTree(dir: 'lib', include: ['*.jar'])
 }
