--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,9 @@ repositories {
 
 dependencies {
 
+    compile 'org.processing:core:2.2.1'
     compile 'log4j:log4j:1.2.17'
-    compile 'org.jogamp.jogl:jogl:2.3.2'
+    compile group: 'javax.media', name: 'jai-core', version: '1.1.3'
     compile 'com.sun.xml.messaging.saaj:saaj-impl:1.3'
     compile 'com.miglayout:miglayout:3.7.4'
     compile 'org.scream3r:jssc:2.8.0'
@@ -40,7 +41,6 @@ dependencies {
     compile 'net.sf.marineapi:marineapi:0.9.0'
     compile 'org.apache.commons:commons-math3:3.6.1'
     compile 'com.github.lgooddatepicker:LGoodDatePicker:8.3.0'
-    compile 'org.processing:core:2.2.1'
     compile 'com.jidesoft:jide-oss:3.6.18'
     compile 'de.micromata.jak:JavaAPIforKml:2.2.1'
     compile 'de.grundid.opendatalab:geojson-jackson:1.8'
