--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,31 @@ dependencies {
     compile 'de.grundid.opendatalab:geojson-jackson:1.8'
     compile 'org.postgresql:postgresql:9.4.1212.jre7'
 
+    runtime "org.jogamp.gluegen:gluegen-rt:2.2.4"
+    runtime "org.jogamp.jogl:jogl-all:2.2.4"
+
+    runtime "org.jogamp.gluegen:gluegen-rt:2.2.4:natives-android-armv6"
+    runtime "org.jogamp.gluegen:gluegen-rt:2.2.4:natives-linux-amd64"
+    runtime "org.jogamp.gluegen:gluegen-rt:2.2.4:natives-linux-armv6"
+    runtime "org.jogamp.gluegen:gluegen-rt:2.2.4:natives-linux-armv6hf"
+    runtime "org.jogamp.gluegen:gluegen-rt:2.2.4:natives-linux-i586"
+    runtime "org.jogamp.gluegen:gluegen-rt:2.2.4:natives-macosx-universal"
+    runtime "org.jogamp.gluegen:gluegen-rt:2.2.4:natives-solaris-amd64"
+    runtime "org.jogamp.gluegen:gluegen-rt:2.2.4:natives-solaris-i586"
+    runtime "org.jogamp.gluegen:gluegen-rt:2.2.4:natives-windows-amd64"
+    runtime "org.jogamp.gluegen:gluegen-rt:2.2.4:natives-windows-i586"
+
+    runtime "org.jogamp.jogl:jogl-all:2.2.4:natives-android-armv6"
+    runtime "org.jogamp.jogl:jogl-all:2.2.4:natives-linux-amd64"
+    runtime "org.jogamp.jogl:jogl-all:2.2.4:natives-linux-armv6"
+    runtime "org.jogamp.jogl:jogl-all:2.2.4:natives-linux-armv6hf"
+    runtime "org.jogamp.jogl:jogl-all:2.2.4:natives-linux-i586"
+    runtime "org.jogamp.jogl:jogl-all:2.2.4:natives-macosx-universal"
+    runtime "org.jogamp.jogl:jogl-all:2.2.4:natives-solaris-amd64"
+    runtime "org.jogamp.jogl:jogl-all:2.2.4:natives-solaris-i586"
+    runtime "org.jogamp.jogl:jogl-all:2.2.4:natives-windows-amd64"
+    runtime "org.jogamp.jogl:jogl-all:2.2.4:natives-windows-i586"
+
     compile fileTree(dir: 'lib', include: ['*.jar'])
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
