--- a/build.gradle
+++ b/build.gradle
@@ -40,14 +40,15 @@ dependencies {
     compile 'org.jdbi:jdbi:2.78'
     compile 'net.sf.marineapi:marineapi:0.9.0'
     compile 'org.apache.commons:commons-math3:3.6.1'
+    compile group: 'commons-net', name: 'commons-net', version: '3.6'
     compile 'com.github.lgooddatepicker:LGoodDatePicker:8.3.0'
     compile 'com.jidesoft:jide-oss:3.6.18'
     compile 'de.micromata.jak:JavaAPIforKml:2.2.1'
     compile 'de.grundid.opendatalab:geojson-jackson:1.8'
     compile 'org.postgresql:postgresql:9.4.1212.jre7'
 
-    runtime "org.jogamp.gluegen:gluegen-rt:2.2.4"
-    runtime "org.jogamp.jogl:jogl-all:2.2.4"
+    compile "org.jogamp.gluegen:gluegen-rt:2.2.4"
+    compile "org.jogamp.jogl:jogl-all:2.2.4"
 
     runtime "org.jogamp.gluegen:gluegen-rt:2.2.4:natives-android-armv6"
     runtime "org.jogamp.gluegen:gluegen-rt:2.2.4:natives-linux-amd64"
